* Changes done: Fix footer overlapping content

--- a/src/App.css
+++ b/src/App.css
@@ -94,7 +94,7 @@ h6 {
 }
 
 .footer {
-    position:fixed;
+    position:static;
     bottom:0;
     width:100%;
     height:10vh;
